--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react-syntax-highlighter": "^15.5.13",
+    "canvas-confetti": "^1.9.3",
     "lucide-react": "^0.462.0",
     "next": "14.2.18",
     "react": "^18",
@@ -17,6 +18,7 @@
     "react-syntax-highlighter": "^15.6.1"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
